add clear route

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -348,6 +348,7 @@
 
     <div class="blue-div">
         <button onclick="clearMap()" class="clear-button">Clear Map</button>
+        <button onclick="resetLineColor()" class="clear-button">Clear Route</button>
         
         <div style="margin-top: 10px; margin-left: 10px; margin-right: 10px;">
             <p>User Guide:</p>
